--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'org.mapsforge:vtm-jts:0.11.1'
     implementation 'org.mapsforge:vtm-themes:0.11.1'
     implementation 'com.caverock:androidsvg:1.3'
-
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'org.slf4j:slf4j-android:1.7.25'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
