--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            multiDexEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -33,17 +34,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
-    implementation 'org.mapsforge:vtm:0.11.1'
-    implementation 'org.mapsforge:vtm-android:0.11.1'
-    implementation 'org.mapsforge:vtm-android:0.11.1:natives-armeabi-v7a'
-    implementation 'org.mapsforge:vtm-android:0.11.1:natives-arm64-v8a'
-    implementation 'org.mapsforge:vtm-android:0.11.1:natives-x86'
-    implementation 'org.mapsforge:vtm-android:0.11.1:natives-x86_64'
-    implementation 'org.mapsforge:vtm-jts:0.11.1'
-    implementation 'org.mapsforge:vtm-themes:0.11.1'
-    implementation 'com.caverock:androidsvg:1.3'
-    implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'org.slf4j:slf4j-android:1.7.25'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
