--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,15 +10,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["room.schemaLocation":
-                                     "$projectDir/schemas".toString()]
-            }
-        }
-        sourceSets {
-            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
-        }
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = ["room.schemaLocation":
+//                                     "$projectDir/schemas".toString()]
+//            }
+//        }
+//        sourceSets {
+//            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+//        }
     }
     buildTypes {
         release {
@@ -45,8 +45,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha02'
-    implementation 'org.slf4j:slf4j-android:1.7.25'
+//    implementation 'org.slf4j:slf4j-android:1.7.25'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.facebook.shimmer:shimmer:0.4.0@aar'
 }
