--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.leon.estimate"
         minSdkVersion 18
         targetSdkVersion 29
@@ -26,6 +27,10 @@ android {
             multiDexEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -50,4 +55,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.facebook.shimmer:shimmer:0.4.0@aar'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    implementation 'com.jakewharton:butterknife-compiler:10.1.0'
+    annotationProcessor "com.jakewharton:butterknife-compiler:10.1.0"
 }
