--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-//        javaCompileOptions {
-//            annotationProcessorOptions {
-//                arguments = ["room.schemaLocation":
-//                                     "$projectDir/schemas".toString()]
-//            }
-//        }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
 //        sourceSets {
 //            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
 //        }
@@ -64,4 +64,10 @@ dependencies {
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:25.2.1'
+    //AndroidX
+    implementation "androidx.cardview:cardview:1.0.0"
 }
