--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
                                      "$projectDir/schemas".toString()]
             }
         }
-//        sourceSets {
-//            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
-//        }
+        sourceSets {
+            androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+        }
     }
     buildTypes {
         release {
@@ -43,6 +43,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:27.0.2"
+
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
     implementation 'org.osmdroid:osmdroid-android:5.0.1@aar'
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
@@ -64,8 +67,6 @@ dependencies {
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
-
-
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:25.2.1'
     //AndroidX
