--- a/build.gradle
+++ b/build.gradle
@@ -8,17 +8,20 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+ext {
+    roomVersion = '1.0.0-alpha4'
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
