--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:25.2.1'
     //AndroidX
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'gun0912.ted:tedpermission:1.0.3'
 }
