--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'http://www.idescout.com/maven/repo/'
+            name 'IDEScout, Inc.'
+        }
 
     }
 }
