--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //noinspection GradleCompatible
-    implementation "com.android.support:design:27.0.2"
+    implementation 'com.android.support:design:27.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.4@aar'
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
@@ -79,19 +78,22 @@ dependencies {
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
     // Room components
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    androidTestImplementation "androidx.room:room-testing:2.1.0"
-//    // Lifecycle components
-//    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
+    //    implementation "android.arch.persistence.room:runtime:1.1.1"
+    //    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1'
+    //    androidTestImplementation "androidx.room:room-testing:2.2.2"
+    //    // Lifecycle components
+    //    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    //    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:25.2.1'
     //AndroidX
-    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'gun0912.ted:tedpermission:1.0.3'
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.github.mayuce:AndroidDocumentScanner:1.4'
     implementation project(':openCVLibrary')
+//    implementation 'com.github.liltof:AndroidScannerDemo:3.2'
+//    implementation files('libs/document-scanner-4.0.0-javadoc.jar')
 }
