--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 //            signingConfig signingConfigs.config
         }
         debug {
+            clean
             debuggable true
             minifyEnabled false
             applicationIdSuffix '.debug'
@@ -64,6 +65,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
+//    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0')
+//    {
+//        transitive = true
+//    }
     implementation 'org.osmdroid:osmdroid-android:6.1.4@aar'
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -94,6 +99,4 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.github.mayuce:AndroidDocumentScanner:1.4'
     implementation project(':openCVLibrary')
-//    implementation 'com.github.liltof:AndroidScannerDemo:3.2'
-//    implementation files('libs/document-scanner-4.0.0-javadoc.jar')
 }
