--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -108,6 +108,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.github.mayuce:AndroidDocumentScanner:1.4'
     implementation project(':openCVLibrary')
-    implementation project(':persiandatepicker')
+//    implementation project(':persiandatepicker')
 //    implementation 'ir.smartlab.persiandatepicker:persiandatepicker:1.0.0'
 }
