--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,17 +74,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.13'
+    implementation files('libs\\poi-3.12-android-a.jar')
+    implementation files('libs\\poi-ooxml-schemas-3.12-20150511-a.jar')
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
+    //AndroidX
+    implementation 'androidx.cardview:cardview:1.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:25.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    testImplementation 'junit:junit:4.13'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.6@aar'
-//    implementation 'org.osmdroid:osmdroid-android:6.1-SNAPSHOT:debug@aar'
+    //noinspection GradlePath
+    implementation files('libs/osmbonuspack_6.6.0.aar')
+    implementation project(':osmbonuspack_6.6.0')
+
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
@@ -100,13 +108,9 @@ dependencies {
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
-    //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:25.2.1'
-    //AndroidX
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'gun0912.ted:tedpermission:1.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.github.mayuce:AndroidDocumentScanner:1.4'
