--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation files('libs\\poi-3.12-android-a.jar')
-    implementation files('libs\\poi-ooxml-schemas-3.12-20150511-a.jar')
+    implementation files('libs/poi-3.12-android-a.jar')
+    implementation files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //AndroidX
@@ -88,6 +88,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.13'
 
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.1.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.6@aar'
     //noinspection GradlePath
     implementation files('libs/osmbonuspack_6.6.0.aar')
