--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.7@aar'
     //noinspection GradlePath
     implementation files('libs/osmbonuspack_6.6.0.aar')
-    implementation project(':osmbonuspack_6.6.0')
+//    implementation project(':osmbonuspack_6.6.0')
 
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -117,4 +117,6 @@ dependencies {
 
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.kyanogen.signatureview:signature-view:1.2'
+
 }
